Update streamsx.wml notebook
- new parameter bundle_size
- delete deprecated parameter expected_load
- update documentation

--- a/Streams-CPD-WMLScoringSample.ipynb
+++ b/Streams-CPD-WMLScoringSample.ipynb
@@ -342,12 +342,12 @@
     "<a id=\"test\"></a>\n",
     "# 2. Test the performance of your online scoring deployment\n",
     "\n",
-    "The streamsx.wml Python package allows to use each WML online deployment to score streaming data. \n",
+    "The streamsx.wml Python package allows you to use each WML online deployment to score streaming data. \n",
     "WML online scoring is based on a REST API. As such it has a poor performance when each input data is scored in single REST request.\n",
     "But the performance of WML online scoring can be increased by \n",
     "-  sending multiple input data in one request (mini batch paradigm)\n",
     "-  having multiple request sender \n",
-    "-  deploying multple node\n",
+    "-  deploying multple nodes\n",
     "\n",
     "The streamsx.wml Python package is using all these possibilities to increase the WML REST performance.\n",
     "\n",
@@ -359,14 +359,27 @@
     "-  so, the higher the number of input data in one request the higher the number to be processed afterwards one by one in case of failure, which takes longer time\n",
     "-  so, input data quality is of high importance to use this mini batch paradigm\n",
     "-  increasing thread number will work only to certain level, delays caused by Python thread handling will get important\n",
-    "-  actual input data sequence is kept, which may lead to postpone threads which got results earlier than the the ones with with earlier data (especially when using multiple deployment nodes)\n",
-    "-  In the used version of streamsx.wml the interface doesn't provide direct setting the amount of input data in one request but it is computed from a expected_load number and thread and node count ( __bundle_size = expected_load/(threads_per_node * node_count)__ ). But experience showed that this is not best way. Later versions will change this.\n",
+    "-  actual input data sequence is kept, which may lead to postpone sending threads which got results earlier than the the ones with earlier data (especially when using multiple deployment nodes)\n",
+    "-  most important for throughput performance is the parameter __bundle_size__ which configures the maximal amount of tuples being bundled in one REST scoring request\n",
+    "-  The __bundle_size__ is only the upper limit. Each sending  thread having completet its work will grab from a queue as much tuples as are available upt to __bundle_size__. If there is only one in queue, which means that there is only low input rate, the thread will take this one for its next cycle.\n",
     "\n",
     "The below code can be taken for any WML online deployment when __field_mapping_dict__ (which assigns streaming data attributes to the mining fields the model expects) and __class TestSource__ are changed according to the model which is deployed.\n",
     "\n",
     "__space_guid__ and __deployment_guid__ are set by the code cells just ran before.\n",
     "\n",
-    "The performance which will be determined here in the notebook will be higher as the one you will get when you use same parameters for the Streaming Application later. There is addidional processing time consumed for sending and receiving data in the Streams runtime."
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "The test performance seen when running the test below will be higher as the one you will get when you use same parameters for the Streaming Application later. \n",
+    "The reason is simple:\n",
+    "<ul>    \n",
+    "    <li> There is no resource intensive upstream or down stream processing.</li>\n",
+    "<li>At streaming application runtime each tuple has to be converted from its transport representation to Python object when received and from Python object/dictionary to transport representation when it is sent.</li>\n",
+    "</ul>\n",
+    "<p/>    \n",
+    "<b>You can assume that you'll get in your streaming application (created in chapter 3) approximately 1/2 of the performance you will see in this test chapter below.</b>\n",
+    "<p/>\n",
+    "<p> The performance varies on the used ML frame work as well as on the used model. You should test the deployment with different parameters for <b>bundle_size</b> and <b>threads_per_node</b>. The parameter <b>node_count</b> has to be changed only when you configured your WML deployment to use more than 1 node.  \n",
+    "</div>"
    ]
   },
   {
@@ -406,16 +419,12 @@
     "#space_guid = <your_guid>\n",
     "\n",
     "field_mapping_dict =[{\"model_field\":\"Sepal.Length\",\n",
-    "                      \"is_mandatory\":True,\n",
     "                      \"tuple_field\":\"sepal_length\"},\n",
     "                     {\"model_field\":\"Sepal.Width\",\n",
-    "                      \"is_mandatory\":True,\n",
     "                      \"tuple_field\":\"sepal_width\"},\n",
     "                     {\"model_field\":\"Petal.Length\",\n",
-    "                      \"is_mandatory\":True,\n",
     "                      \"tuple_field\":\"petal_length\"},\n",
     "                     {\"model_field\":\"Petal.Width\",\n",
-    "                      \"is_mandatory\":True,\n",
     "                      \"tuple_field\":\"petal_width\"}]\n",
     "\n",
     "\n",
@@ -553,9 +562,9 @@
     "    'deployment_guid':deployment_guid,\n",
     "    'wml_credentials':wml_credentials,\n",
     "    'space_guid':space_guid,\n",
-    "    'expected_load':  500,\n",
-    "    'queue_size': 1000, \n",
-    "    'threads_per_node': 5,\n",
+    "    'bundle_size':  1000,\n",
+    "    'queue_size': 10000, \n",
+    "    'threads_per_node': 2,\n",
     "    'node_count':1,\n",
     "    'field_mapping':field_mapping, \n",
     "    'output_function':OutputClass(interval=5.0 ),\n",
@@ -661,8 +670,12 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"streams\" ## Change this to Streams instance\n",
-    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n"
+    "streams_instance_name = \"streams\" ## Change this to your Streams instance\n",
+    "\n",
+    "try:\n",
+    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
+    "except TypeError:\n",
+    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
   {
@@ -822,6 +835,7 @@
     "\n",
     "# let the csv file reader the source/edge node in our topology, producing the 'records' stream                    \n",
     "records = topo.source(CSVFileReader(\"iris_initial.csv\"))\n",
+    "\n",
     "# Let the source run in separate Python interpreter instance.\n",
     "# streamsx.wml.wml_online_scoring() is a Python function and for bestt performance it will need all available ressources of an own Python interpreter instance.\n",
     "records.isolate()\n"
@@ -849,15 +863,12 @@
     "        - the credentials to get access to the deployment <b>mandatory</b><br>\n",
     "        - the space_guid of the deployment <b>mandatory</b><br>\n",
     "        - the queue_size <br>\n",
-    "        - the parameters to calculate the bundle size  <b><code>bundle_size = expected_load/(threads_per_node * node_count)</code></b>\n",
-    "        <ul><li>expected_load</li>\n",
-    "            <li>threads_per_node</li>\n",
-    "            <li>node_count</li>\n",
-    "        </ul>\n",
+    "        - the bundle_size to configure the maximum tuples in one scoring request<br>\n",
+    "        - the threads_per_node to configure the number of threads used to send request to WML REST endpoint<br>\n",
+    "        - the node_count if you configured you WML deployment to use more than 1 node<br>\n",
     "    </li>\n",
     "</ul>\n",
     "\n",
-    "<p>Next versions will provide <b>bundle_size</b> parameter directly, as it showed that this formula was not best choice. But up to there you will need to set the expected_load so that you together with node_count and threads_per_node get a bundle_size of your choice.</p>\n",
     "<p>In the code below we use values which were seen to give a good performance. It is assumed that there is one deployment node created. You may later play around with the values to see if they match the expectations you have from the performance test before</p>\n",
     "    \n",
     "</div>"
@@ -875,16 +886,12 @@
     "# Define the parameter for the scoring function\n",
     "#####################################################################################\n",
     "field_mapping_dict =[{\"model_field\":\"Sepal.Length\",\n",
-    "                      \"is_mandatory\":True,\n",
     "                      \"tuple_field\":\"sepal_length\"},\n",
     "                     {\"model_field\":\"Sepal.Width\",\n",
-    "                      \"is_mandatory\":True,\n",
     "                      \"tuple_field\":\"sepal_width\"},\n",
     "                     {\"model_field\":\"Petal.Length\",\n",
-    "                      \"is_mandatory\":True,\n",
     "                      \"tuple_field\":\"petal_length\"},\n",
     "                     {\"model_field\":\"Petal.Width\",\n",
-    "                      \"is_mandatory\":True,\n",
     "                      \"tuple_field\":\"petal_width\"}]\n",
     "\n",
     "# streamsx.wml.wml_online_scoring() support field mapping as JSON or dict\n",
@@ -899,7 +906,7 @@
     "    'field_mapping':field_mapping, \n",
     "    'credentials':wml_credentials,\n",
     "    'space_guid':space_guid,           #the one from the cells run above\n",
-    "    'expected_load':  2000,\n",
+    "    'bundle_size':  1000,\n",
     "    'queue_size': 10000, \n",
     "    'threads_per_node': 2,\n",
     "    'node_count':1,\n",
@@ -915,16 +922,14 @@
     "####################################################################################\n",
     "scorings,invalids = streamsx.wml.wml_online_scoring(records, \n",
     "                                                  **params)\n",
-    "\n",
-    "\n",
+    "# for best load results in this test application\n",
+    "# separate the scoring from down stream functionality of publish() and view()\n",
     "scorings.isolate()\n",
     "scorings_mapped = scorings.map(lambda x: x)\n",
     "\n",
     "# publish results as JSON\n",
-    "#scorings.publish(topic=\"ScoredRecords\",schema=json,name=\"PublishScores\")\n",
-    "#score_view = scorings.view(name=\"ScoredRecords\", description=\"Sample of scored records\")\n",
-    "#scorings_mapped.publish(topic=\"ScoredRecords\",schema=json,name=\"PublishScores\")\n",
-    "#score_view = scorings_mapped.view(name=\"ScoredRecords\", description=\"Sample of scored records\")\n",
+    "scorings_mapped.publish(topic=\"ScoredRecords\",schema=json,name=\"PublishScores\")\n",
+    "score_view = scorings_mapped.view(name=\"ScoredRecords\", description=\"Sample of scored records\")\n",
     "\n",
     "\n",
     "# Disable SSL certificate verification if necessary\n",
@@ -960,7 +965,7 @@
     "queue = score_view.start_data_fetch()\n",
     "try:\n",
     "    for val in range(20):\n",
-    "        print(queue.get())    \n",
+    "        print(queue.get(timeout=60))    \n",
     "finally:\n",
     "    score_view.stop_data_fetch()"
    ]
