Add connection type GenericWebHDFS to HDFS Notebook #43

--- a/Streams-HdfsSample.ipynb
+++ b/Streams-HdfsSample.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
+    "streams_instance_name = \"streams\" ## Change this to Streams instance\n",
     "\n",
     "try:\n",
     "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
@@ -79,6 +79,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#!pip install streamsx\n",
+    "#!pip install streamsx.hdfs\n",
+    "\n",
     "import streamsx.hdfs as hdfs\n",
     "import streamsx.topology.context\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
@@ -113,9 +116,16 @@
     "  \"webhdfs\": \"webhdfs://your-hdfs-hostname:8443\"\n",
     "}\n",
     "```\n",
-    "- The JSON string begins with `{` and ends with `}`.\n",
-    "- Copy the credentials JSON string in your clipboard.\n",
-    "- Paste the credentials into `HDFS credentials:` prompt below.\n"
+    "- The JSON string begins with `{` and ends with `}`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 2 options to put the HDFS credentials:\n",
+    "\n",
+    "1- Copy the credentials JSON string as described above in your clipboard and paste the credentials into `HDFS credentials:` prompt below."
    ]
   },
   {
@@ -125,7 +135,27 @@
    "outputs": [],
    "source": [
     "import getpass\n",
-    "hdfs_credentials=getpass.getpass('HDFS credentials:')"
+    "hdfs_credentials=getpass.getpass('HDFS credentials:')\n",
+    "print (hdfs_credentials)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2- Perform the steps [Connecting to data source](https://www.ibm.com/support/producthub/icpdata/docs/content/SSQNUZ_current/cpd/access/connect-data-sources.html)\n",
+    "and create an external configuration from type `GenericWebHDFS` and put the connection name in the next step.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection_name = 'WebHDFS'\n",
+    "hdfs_credentials=icpd_util.get_connection(connection_name, conn_class='external')\n",
+    "print(hdfs_credentials) "
    ]
   },
   {
