Update instructions for different environments
Make instructions clearer.

--- a/Streams-BasicSample.ipynb
+++ b/Streams-BasicSample.ipynb
@@ -43,13 +43,17 @@
     "\n",
     "<a name=\"setup\"></a>\n",
     "\n",
+    "\n",
     "# 1. Set up a connection to the Streams instance\n",
     "\n",
     "\n",
-    "To submit the application for execution, you have to connect to the Streams instance. The application is always the same, but the information required to connect to the instance depends on the target installation of Streams.\n",
+    "To submit the application for execution, you have to connect to the Streams instance. The information required to connect to the instance depends on the target installation of Streams. \n",
     "\n",
-    "- [I'm running the notebook from an IBM Cloud for Data project](#cpd)\n",
-    "- [I'm using IBM Watson Studio, Jupyter Notebooks, or any other development environment](#notcpd)\n"
+    "Choose the option that matches your development environment.\n",
+    "\n",
+    "- **Option 1**: [I'm running the notebook from an IBM Cloud for Data project](#cpd)\n",
+    "- **Option 2**: [I'm using IBM Watson Studio, Jupyter Notebooks, or any other development environment](#notcpd)\n",
+    "\n"
    ]
   },
   {
@@ -57,7 +61,7 @@
    "metadata": {},
    "source": [
     "<a name=\"cpd\"></a>\n",
-    "### 1.1a Connect to a Streams instance from an IBM Cloud Pak for Data  project\n",
+    "### Option 1: Connect to a Streams instance from an IBM Cloud Pak for Data  project\n",
     "\n",
     "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
@@ -66,19 +70,28 @@
     "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name\n",
     "4. Run the cell and skip to section 1.2\n",
     "\n",
-    "The cell below defines a function called `submit_topology` that will be used later on to submit the `Topology` once it is defined."
+    "The cell below defines a function called `submit_topology` that will be used later on to submit the `Topology` once it is defined.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setup complete, continue to section 1.2\n"
+     ]
+    }
+   ],
    "source": [
     "from icpd_core import icpd_util\n",
     "from streamsx.topology import context\n",
     "\n",
-    "streams_instance_name = \"streams\" ## Change this to Streams instance\n",
+    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
     "try:\n",
     "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
     "except TypeError:\n",
@@ -90,7 +103,9 @@
     "    cfg[context.ConfigParams.SSL_VERIFY] = False\n",
     "    # Topology wil be deployed as a distributed app\n",
     "    contextType = context.ContextTypes.DISTRIBUTED\n",
-    "    return context.submit (contextType, topo, config = cfg)"
+    "    return context.submit (contextType, topo, config = cfg)\n",
+    "\n",
+    "print(\"Setup complete, continue to section 1.2\")"
    ]
   },
   {
@@ -98,21 +113,22 @@
    "metadata": {},
    "source": [
     "<a name=\"notcpd\"></a>\n",
-    "### 1.1b Connect to a Streams instance from IBM Watson Studio and other environments\n",
+    "### Option 2: Connect to a Streams instance from IBM Watson Studio and other environments\n",
     "\n",
-    "The code for each scenario is available in the development guide.\n",
+    "*Skip this section if you are running the notebook from a Cloud Pak for Data project.*\n",
     "\n",
-    "- Choose the tab that best matches your environment. Copy the code under the heading **Copy this code snippet**.\n",
+    "The code for each scenario is available in the development guide.  \n",
+    "Each snippet will define a function called `submit_topology` that will be used later on to submit the `Topology` once it is defined.\n",
+    "\n",
+    "- Choose the tab that best matches your environment. \n",
+    "- Copy the code under the heading **Copy this code snippet**.\n",
     "- Paste it in the cell below.\n",
-    "\n",
-    "[Connection instructions from the development guide](https://ibmstreams.github.io/streamsx.documentation/docs/python/1.6/python-appapi-devguide-3/#1-set-up-a-connection-to-the-streams-instance)\n",
-    "\n",
-    "Each snippet will define a function called `submit_topology` that will be used later on to submit the `Topology` once it is defined."
+    "    [Connection instructions from the development guide](https://ibmstreams.github.io/streamsx.documentation/docs/python/1.6/python-appapi-devguide-2/#connect)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,9 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: streamsx package version: 1.14.13\n"
+     ]
+    }
+   ],
    "source": [
     "import streamsx.topology.context\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
@@ -149,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,9 +216,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submitting Topology to Streams for execution..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b61720b4f6c47a59339861df309032c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=0, bar_style='info', description='Initializing', max=10, style=ProgressStyle(description_wid…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Insecure host connections enabled.\n",
+      "Insecure host connections enabled.\n",
+      "Insecure host connections enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JobId:  8 \n",
+      "Job name:  natasha::BasicTemplate_8\n"
+     ]
+    }
+   ],
    "source": [
     "# The submission_result object contains information about the running application, or job\n",
     "print(\"Submitting Topology to Streams for execution..\")\n",
@@ -250,7 +313,9 @@
    "outputs": [],
    "source": [
     "# cancel the job directly using the Job object\n",
-    "streams_job.cancel()"
+    "submission_result.cancel_job_button()\n",
+    "# or, use \n",
+    "# streams_job.cancel()"
    ]
   }
  ],
