--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -54,13 +54,12 @@
     "# 1. Set up a connection to the Streams instance\n",
     "\n",
     "\n",
-    "To submit the application for execution, you have to connect to the Streams instance. The application is always the same, but the information required to connect to the instance depends on the target installation of Streams.\n",
+    "To submit the application for execution, you have to connect to the Streams instance. The information required to connect to the instance depends on the target installation of Streams. \n",
     "\n",
-    "- [I'm running the notebook from an IBM Cloud for Data project](#cpd)\n",
-    "- [I'm using IBM Watson Studio, Jupyter Notebooks, or any other development environment](#notcpd)\n",
+    "Choose the option that matches your development environment.\n",
     "\n",
-    "\n",
-    "\n",
+    "- **Option 1**: [I'm running the notebook from an IBM Cloud for Data project](#cpd)\n",
+    "- **Option 2**: [I'm using IBM Watson Studio, Jupyter Notebooks, or any other development environment](#notcpd)\n",
     "\n"
    ]
   },
@@ -69,7 +68,7 @@
    "metadata": {},
    "source": [
     "<a name=\"cpd\"></a>\n",
-    "### 1.1a Connect to a Streams instance from an IBM Cloud Pak for Data  project\n",
+    "### Option 1: Connect to a Streams instance from an IBM Cloud Pak for Data  project\n",
     "\n",
     "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
@@ -84,9 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setup complete, continue to section 1.2\n"
+     ]
+    }
+   ],
    "source": [
     "from icpd_core import icpd_util\n",
     "from streamsx.topology import context\n",
@@ -104,7 +111,9 @@
     "    cfg[context.ConfigParams.SSL_VERIFY] = False\n",
     "    # Topology wil be deployed as a distributed app\n",
     "    contextType = context.ContextTypes.DISTRIBUTED\n",
-    "    return context.submit (contextType, topo, config = cfg)"
+    "    return context.submit (contextType, topo, config = cfg)\n",
+    "\n",
+    "print(\"Setup complete, continue to section 1.2\")"
    ]
   },
   {
@@ -112,16 +121,17 @@
    "metadata": {},
    "source": [
     "<a name=\"notcpd\"></a>\n",
-    "### 1.1b Connect to a Streams instance from IBM Watson Studio and other environments\n",
+    "### Option 2: Connect to a Streams instance from IBM Watson Studio and other environments\n",
     "\n",
-    "The code for each scenario is available in the development guide.\n",
+    "*Skip this section if you are running the notebook from a Cloud Pak for Data project.*\n",
     "\n",
-    "- Choose the tab that best matches your environment. Copy the code under the heading **Copy this code snippet**.\n",
+    "The code for each scenario is available in the development guide.  \n",
+    "Each snippet will define a function called `submit_topology` that will be used later on to submit the `Topology` once it is defined.\n",
+    "\n",
+    "- Choose the tab that best matches your environment. \n",
+    "- Copy the code under the heading **Copy this code snippet**.\n",
     "- Paste it in the cell below.\n",
-    "\n",
-    "[Connection instructions from the development guide](https://ibmstreams.github.io/streamsx.documentation/docs/python/1.6/python-appapi-devguide-3/#1-set-up-a-connection-to-the-streams-instance)\n",
-    "\n",
-    "Each snippet will define a function called `submit_topology` that will be used later on to submit the `Topology` once it is defined."
+    "    [Connection instructions from the development guide](https://ibmstreams.github.io/streamsx.documentation/docs/python/1.6/python-appapi-devguide-2/#connect)\n"
    ]
   },
   {
@@ -142,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: streamsx package version: 1.14.13\n"
+     ]
+    }
+   ],
    "source": [
     "import streamsx.topology.context\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
@@ -166,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,9 +437,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<streamsx.topology.topology.Sink at 0x7f9dbcc69ef0>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "# publish results as JSON\n",
@@ -446,9 +475,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submitting Topology to Streams for execution..\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a7ed3b286def4575be43f672776ab3d8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=0, bar_style='info', description='Initializing', max=10, style=ProgressStyle(description_wid…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Insecure host connections enabled.\n",
+      "Insecure host connections enabled.\n",
+      "Insecure host connections enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JobId:  7 \n",
+      "Job name:  natasha::SensorAverages_7\n"
+     ]
+    }
+   ],
    "source": [
     "# The submission_result object contains information about the running application, or job\n",
     "print(\"Submitting Topology to Streams for execution..\")\n",
@@ -474,9 +542,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching view data ...\n",
+      "{'average': 1638.4208295058636, 'sensor_id': 'sensor_1', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.6074, -74.0288]}\n",
+      "{'average': 1585.5711353620761, 'sensor_id': 'sensor_10', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.5221, -74.1202]}\n",
+      "{'average': 1695.0489727665845, 'sensor_id': 'sensor_100', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.4907, -74.6753]}\n",
+      "{'average': 1467.3317589921596, 'sensor_id': 'sensor_11', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.5653, -74.6608]}\n",
+      "{'average': 1311.4337845103387, 'sensor_id': 'sensor_12', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.1358, -74.3805]}\n",
+      "{'average': 2111.056978894137, 'sensor_id': 'sensor_13', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.7504, -74.6318]}\n",
+      "{'average': 1877.9104272407574, 'sensor_id': 'sensor_14', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.6737, -74.7344]}\n",
+      "{'average': 1281.5907322347166, 'sensor_id': 'sensor_15', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.5332, -73.8829]}\n",
+      "{'average': 1322.9129925569678, 'sensor_id': 'sensor_16', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.0474, -74.8014]}\n",
+      "{'average': 1626.8447123401008, 'sensor_id': 'sensor_17', 'period_end': 'Tue May 19 17:33:39 2020', 'coords': [40.2979, -74.7501]}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Fetching view data ...\")\n",
     "# Connect to the view and display the data\n",
@@ -546,12 +632,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb6ae02c2a464b68b9f735586b7f91a6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Button(button_style='danger', description='Cancel job: natasha::SensorAverages_7', layout=Layou…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# cancel the job directly using the Job object\n",
-    "streams_job.cancel()"
+    "submission_result.cancel_job_button()\n",
+    "# or, use\n",
+    "# streams_job.cancel()"
    ]
   },
   {
