--- a/Streams-CPD-WMLScoringSample.ipynb
+++ b/Streams-CPD-WMLScoringSample.ipynb
@@ -624,7 +624,7 @@
    "metadata": {},
    "source": [
     "<a id=\"application\"></a>\n",
-    "# 3. Create and run a Streamiing Analytics application using this WML online scoring deployment"
+    "# 3. Create and run a Streaming Analytics application using this WML online scoring deployment"
    ]
   },
   {
@@ -789,7 +789,7 @@
     "               \"referenceSpecies\" : <species_target>,\n",
     "               \"Prediction\" : \"\"}`\n",
     "\n",
-    "\"Prediction\" will be the field which contains the result from scoriing. Depending on model and model framework the \"Prediction\" may be single value or a dictionary of multiple values."
+    "\"Prediction\" will be the field which contains the result from scoring. Depending on model and model framework the \"Prediction\" may be single value or a dictionary of multiple values."
    ]
   },
   {
