added a namespace to the topology. Avoids errors when the namespace is derived from project name.

--- a/Streams-BasicSample.ipynb
+++ b/Streams-BasicSample.ipynb
@@ -182,7 +182,7 @@
     "from streamsx.topology.topology import Topology\n",
     "import streamsx.topology.context\n",
     "\n",
-    "topo = Topology(name=\"BasicTemplate\")"
+    "topo = Topology(name=\"BasicTemplate\", namespace=\"sample\")"
    ]
   },
   {
