--- a/Streams-CPD-WMLScoringSample.ipynb
+++ b/Streams-CPD-WMLScoringSample.ipynb
@@ -748,7 +748,7 @@
     "from streamsx.topology.topology import Topology\n",
     "import os\n",
     "\n",
-    "topo = Topology(name=\"WMLScoring\")\n",
+    "topo = Topology(name=\"WMLScoring\", namespace=\"sample\")\n",
     "\n",
     "# add files to be contained in the archive which is deployed to the node running the application\n",
     "# in this sample we need the Iris `dataset` with sample data to be present at the worker node\n",
