--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -212,7 +212,7 @@
     "import streamsx.database as db\n",
     "\n",
     "# create a Topology object\n",
-    "topo = Topology(name=\"DatabaseSample\")"
+    "topo = Topology(name=\"DatabaseSample\", namespace=\"sample\")"
    ]
   },
   {
