--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -272,7 +272,7 @@
    "source": [
     "from streamsx.topology.topology import Topology\n",
     "\n",
-    "topo = Topology(name=\"EventStoreInsertSample\")"
+    "topo = Topology(name=\"EventStoreInsertSample\", namespace=\"sample\")"
    ]
   },
   {
