--- a/Streams-EventStreamsSample.ipynb
+++ b/Streams-EventStreamsSample.ipynb
@@ -178,7 +178,7 @@
    "source": [
     "from streamsx.topology.topology import Topology\n",
     "\n",
-    "topo = Topology(name=\"EventStreamsSample\")"
+    "topo = Topology(name=\"EventStreamsSample\", namespace=\"sample\")"
    ]
   },
   {
