--- a/Streams-HdfsSample.ipynb
+++ b/Streams-HdfsSample.ipynb
@@ -182,7 +182,7 @@
     "\n",
     "\n",
     "# create a Topology object\n",
-    "topo = Topology(name=\"hdfs\")"
+    "topo = Topology(name=\"hdfs\", namespace=\"sample\")"
    ]
   },
   {
