--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -177,7 +177,7 @@
     "from streamsx.kafka.schema import Schema\n",
     "from streamsx.kafka import AuthMethod\n",
     "\n",
-    "consumer_topology = Topology(name='KafkaParallelSample-Consumer')"
+    "consumer_topology = Topology(name='KafkaParallelSample-Consumer', namespace='sample')"
    ]
   },
   {
@@ -474,7 +474,7 @@
     "            reading[\"ts\"] = int(datetime.now().timestamp())\n",
     "            yield reading\n",
     "\n",
-    "producer_topology = Topology(name='KafkaParallelSample-Producer')\n",
+    "producer_topology = Topology(name='KafkaParallelSample-Producer', namespace='sample')\n",
     "\n",
     "# create the data and map them to the attributes 'message' and 'key' of the\n",
     "# 'Schema.StringMessage' schema for Kafka, so that we have messages with keys\n",
