--- a/Streams-PMMLScoringSample.ipynb
+++ b/Streams-PMMLScoringSample.ipynb
@@ -198,7 +198,7 @@
     "from streamsx.topology.topology import Topology\n",
     "import os\n",
     "\n",
-    "topo = Topology(name=\"PMMLScoring\")\n",
+    "topo = Topology(name=\"PMMLScoring\", namespace=\"sample\")\n",
     "\n",
     "# add files to be contained in the archive which is deployed to the node running the application\n",
     "# in this sample we need the `dataset` with sample data to be present at the worker node\n",
