--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -191,7 +191,7 @@
    "source": [
     "from streamsx.topology.topology import Topology\n",
     "\n",
-    "topo = Topology(name=\"SensorAverages\")"
+    "topo = Topology(name=\"SensorAverages\", namespace=\"sample\")"
    ]
   },
   {
