--- a/Streams-SPLToolkitsTutorial.ipynb
+++ b/Streams-SPLToolkitsTutorial.ipynb
@@ -507,7 +507,7 @@
     "        for i in range(self.count):\n",
     "            yield doc + ' - doc_' + str(i)\n",
     "\n",
-    "topo = Topology(\"NLPSample\")\n",
+    "topo = Topology(\"NLPSample\", namespace=\"sample\")\n",
     "s = topo.source(StringData(1000)).as_string()\n",
     "s.publish(\"streamsx/nlp/documents\", schema=CommonSchema.String)\n",
     "    \n",
@@ -622,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topo_spl = Topology(\"WrapSPLOperatorsSample\")"
+    "topo_spl = Topology(\"WrapSPLOperatorsSample\", namespace=\"sample\")"
    ]
   },
   {
