--- a/Streams-HbaseSample.ipynb
+++ b/Streams-HbaseSample.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "\n",
     "# create a Topology object\n",
-    "topo = Topology(name=\"hbase\")"
+    "topo = Topology(name=\"hbase\", namespace=\"sample\")"
    ]
   },
   {
