--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -117,14 +117,17 @@
     "es_db = 'EVENTDB'\n",
     "\n",
     "# Deployment id\n",
-    "deployment_id = 'db2eventstore-1574829525307'\n",
+    "deployment_id = 'db2eventstore-1591210823323'\n",
     "\n",
     "# Access information: Scala Connection URL\n",
     "es_connection = # Copy Scala Connection URL from Database Details page\n",
     "\n",
-    "# Cloud Pak for Data host and port\n",
-    "host = '' # host from Cloud Pak for Data URL\n",
-    "port = '' # port from Cloud Pak for Data URL"
+    "# Cloud Pak for Data host and port, change values below\n",
+    "host = 'zen-cpd-zen.apps.cpd-001.sample.com' # host from Cloud Pak for Data URL\n",
+    "port = '443' # port from Cloud Pak for Data URL\n",
+    "\n",
+    "# Cloud Pak for Data project/namespace\n",
+    "prj = 'zen'"
    ]
   },
   {
@@ -154,12 +157,12 @@
     "        truststore, keystore\n",
     "    .. warning:: The function can be used only in Cloud Pak for Data\n",
     "    \"\"\"\n",
-    "    clientkeystore = '/user-home/_global_/dbdrivers/eventstore/'+deployment_id+'/clientkeystore'\n",
+    "    clientkeystore = '/user-home/_global_/dbdrivers/eventstore_metadata/'+deployment_id+'/clientkeystore'\n",
     "    es_truststore = clientkeystore\n",
     "    es_keystore = clientkeystore\n",
     "    return es_truststore, es_keystore\n",
     "\n",
-    "def get_keystore_password(deployment_id, host, port):\n",
+    "def get_keystore_password(deployment_id, host, port, prj):\n",
     "    \"\"\"Retrieve keystore password and truststore password for Event Store service in Cloud Pak for Data.\n",
     "    Example::\n",
     "        es_truststore_password, es_keystore_password = get_keystore_password(deployment_id, host, port)\n",
@@ -177,7 +180,7 @@
     "\n",
     "    session=requests.session()\n",
     "    requests.packages.urllib3.disable_warnings()\n",
-    "    rest_url = 'https://' + host + ':' + port + '/icp4data-databases/'+deployment_id+'/nbg/com/ibm/event/api/v1/oltp/keystore_password'\n",
+    "    rest_url = 'https://' + host + ':' + port + '/icp4data-databases/'+deployment_id+'/'+prj+'/com/ibm/event/api/v1/oltp/keystore_password'\n",
     "    print(rest_url)\n",
     "    response = session.get(rest_url, headers={\"Authorization\": \"Bearer \" + token}, verify=False)\n",
     "    if response.status_code==200:\n",
@@ -228,7 +231,7 @@
     "else:\n",
     "    es_user = input(\"Event Store user:\")\n",
     "    es_password = getpass.getpass('Event Store password for user '+es_user+':')\n",
-    "    es_truststore_password, es_keystore_password = get_keystore_password(deployment_id, host, port)\n",
+    "    es_truststore_password, es_keystore_password = get_keystore_password(deployment_id, host, port, prj)\n",
     "    # create application configuration\n",
     "    app_cfg = es.configure_connection(instance, name=eventstore_instance, database=es_db, connection=es_connection, user=es_user, password=es_password, keystore_password=es_keystore_password, truststore_password=es_truststore_password)\n",
     "\n",
@@ -282,7 +285,7 @@
     "<a id=\"create\"></a>\n",
     "### 2.0.1 (OPTIONAL) Add downloaded streamsx.eventstore toolkit to the topology\n",
     "\n",
-    "In this case the toolkit downloaded in step 1.3.1 used for building the Streams application und not the toolkit that it located on the IBM Streams build service."
+    "Uncomment the lines in the cell below, if you need to use the latest toolkit downloaded form GitHub."
    ]
   },
   {
@@ -291,9 +294,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if eventstore_toolkit is not None:\n",
-    "    # add event store toolkit to topology\n",
-    "    streamsx.spl.toolkit.add_toolkit(topo, eventstore_toolkit)"
+    "#import streamsx.spl.toolkit as toolkit\n",
+    "#import streamsx.eventstore as es\n",
+    "#eventstore_toolkit = es.download_toolkit()\n",
+    "#if eventstore_toolkit is not None: \n",
+    "#    toolkit.add_toolkit(topo, eventstore_toolkit) # add event store toolkit to topology"
    ]
   },
   {
