KafkaParallelSample: parallel region routing changed, resolves #58

--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "**About the sample**\n",
     "\n",
-    "The main goal of the sample is to show how to connect to a Kafka broker and how to create a Kafka consumer group with downstream parallel processing of the fetched messages. A consumer group is mostly used to consume partitioned topics with multiple consumers sharing the partitions. The messages are typically distributed to the partitions by using a *key*. When keyed messages are processed in parallel after reception by a consumer group it is desired to stick the message keys to one channel only. To achieve this, we route the tuples by a hash of the key to the parallel channel.\n",
+    "The main goal of the sample is to show how to connect to a Kafka broker and how to create a Kafka consumer group with downstream parallel processing of the fetched messages. A consumer group is mostly used to consume partitioned topics with multiple consumers sharing the partitions. The messages are typically distributed to the partitions by using a *key*. When keyed messages are processed in parallel after reception by a consumer group it is desired to stick the message keys to one channel only. To achieve this, we route the tuples by the key to the parallel channel.\n",
     "\n",
     "Consuming a single-partition topic with more than one consumer has no advantage as failed consumers are restarted by Streams nearly as quickly as a failover of the single partition to another consumer would take.\n",
     "\n",
@@ -63,13 +63,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"sample-streams\" ## change this to Streams instance\n",
-    "\n",
     "try:\n",
-    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
-    "except TypeError:\n",
-    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+    "    from icpd_core import icpd_util\n",
+    "    streams_instance_name = \"sample-streams\" ## change this to Streams instance\n",
+    "\n",
+    "    try:\n",
+    "        cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
+    "    except TypeError:\n",
+    "        cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n",
+    "except ImportError:\n",
+    "    # not on a Cloud Pak for Data?\n",
+    "    cfg = dict()"
    ]
   },
   {
@@ -88,7 +92,11 @@
     "import streamsx.kafka as kafka\n",
     "import streamsx.topology.context as context\n",
     "print (\"INFO: streamsx package version: \" + context.__version__)\n",
-    "print (\"INFO: streamsx.kafka package version: \" + kafka.__version__)"
+    "print (\"INFO: streamsx.kafka package version: \" + kafka.__version__)\n",
+    "\n",
+    "# need streamsx >= 1.15.0\n",
+    "if int(context.__version__.split('.')[1]) < 15:\n",
+    "    raise ImportError(\"Your version of streamsx is too old. Please install streamsx >= 1.15.0\")"
    ]
   },
   {
@@ -290,12 +298,7 @@
    "source": [
     "## 2.3 Parallelize message processing with schema transform\n",
     "\n",
-    "Parallelize processing in four parallel channels, routing to the channels is hash based.\n",
-    "We need a consistent hash function that calculates a hash from a string.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "    <b>Warning:</b> The Python <i>hash</i> function cannot be used as a <i>consistent</i> hash function as it adds random salt to the hash calculation. Its result is different after a process restarted. When a processing element in the Streams application is re-launched, the results of <i>hash</i> change, so that the routing to the parallel channel changes.\n",
-    "</div>\n"
+    "Parallelize processing in four parallel channels, routing to the channels is key based, where the key is the `key` attribute from the data stream.\n"
    ]
   },
   {
@@ -304,21 +307,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate a hash code of a string in a consistent way\n",
-    "# needed for partitioned parallel streams\n",
-    "def string_hashcode(s):\n",
-    "    h = 0\n",
-    "    for c in s:\n",
-    "        h = (31 * h + ord(c)) & 0xFFFFFFFF\n",
-    "    return ((h + 0x80000000) & 0xFFFFFFFF) - 0x80000000\n",
-    "\n",
-    "\n",
     "# start another parallel region partitioned by message key,\n",
     "# so that each key always goes into the same parallel channel\n",
     "receivedParallelPartitioned = received.parallel(\n",
     "    4,\n",
-    "    routing=Routing.HASH_PARTITIONED,\n",
-    "    func=lambda _tuple: string_hashcode(_tuple['key']))"
+    "    routing=Routing.KEY_PARTITIONED,\n",
+    "    keys=['key'])"
    ]
   },
   {
@@ -546,7 +540,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# disable SSL certificate verification if necessary\n",
@@ -659,7 +655,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -673,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
