stop view's data fetch in case the job is cancelled while display() is still in progress

--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -635,8 +635,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cancel the jobs directly using the Job objects\n",
+    "# stop the view's background data fetch in case the 60 seconds display duration are not yet over\n",
+    "streamView.stop_data_fetch()\n",
     "\n",
+    "# cancel the jobs directly using the Job objects\n",
     "producer_job.cancel()\n",
     "consumer_job.cancel()"
    ]
