--- a/Streams-EventStreamsSample.ipynb
+++ b/Streams-EventStreamsSample.ipynb
@@ -494,6 +494,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# stop the view's background data fetch in case the 30 seconds display duration are not yet over\n",
+    "sensor3_view.stop_data_fetch()\n",
+    "\n",
     "# cancel the job in the IBM Streams service\n",
     "streams_job.cancel()"
    ]
@@ -514,7 +517,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -528,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
