--- a/Streams-KafkaBasicSample.ipynb
+++ b/Streams-KafkaBasicSample.ipynb
@@ -63,13 +63,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
-    "\n",
     "try:\n",
-    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
-    "except TypeError:\n",
-    "    cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+    "    from icpd_core import icpd_util\n",
+    "    streams_instance_name = \"sample-streams\" ## change this to Streams instance\n",
+    "\n",
+    "    try:\n",
+    "        cfg=icpd_util.get_service_instance_details(name=streams_instance_name, instance_type=\"streams\")\n",
+    "    except TypeError:\n",
+    "        cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n",
+    "except ImportError:\n",
+    "    # not on a Cloud Pak for Data?\n",
+    "    cfg = dict()"
    ]
   },
   {
@@ -541,8 +545,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cancel the jobs directly using the Job objects\n",
+    "# stop the view's background data fetch in case the 60 seconds display duration are not yet over\n",
+    "streamView.stop_data_fetch()\n",
     "\n",
+    "# cancel the jobs directly using the Job objects\n",
     "producer_job.cancel()\n",
     "consumer_job.cancel()"
    ]
@@ -561,7 +567,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -575,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
