import Instance from the right python module

--- a/Streams-EventStreamsSample.ipynb
+++ b/Streams-EventStreamsSample.ipynb
@@ -129,7 +129,11 @@
    "outputs": [],
    "source": [
     "# create an application configuration\n",
-    "from streamsx.rest import Instance\n",
+    "try:\n",
+    "    from streamsx.rest_primitives import Instance\n",
+    "except ImportError:\n",
+    "    # streamsx < 1.15.1\n",
+    "    from streamsx.rest import Instance\n",
     "\n",
     "cfg[streamsx.topology.context.ConfigParams.SSL_VERIFY] = False\n",
     "instance = Instance.of_service(cfg)\n",
