--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -213,7 +213,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from streamsx.rest import Instance\n",
+    "try:\n",
+    "    from streamsx.rest_primitives import Instance\n",
+    "except ImportError:\n",
+    "    # streamsx < 1.15.1\n",
+    "    from streamsx.rest import Instance\n",
+    "\n",
     "import streamsx.topology.context\n",
     "import streamsx.eventstore as es\n",
     "import getpass\n",
@@ -412,7 +417,12 @@
     "\n",
     "---------\n",
     "```\n",
-    "from streamsx.rest import Instance\n",
+    "try:\n",
+    "    from streamsx.rest_primitives import Instance\n",
+    "except ImportError:\n",
+    "    # streamsx < 1.15.1\n",
+    "    from streamsx.rest import Instance\n",
+    "\n",
     "from streamsx.topology import context\n",
     "\n",
     "# Disable SSL certificate verification if necessary\n",
@@ -443,7 +453,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from streamsx.rest import Instance\n",
+    "try:\n",
+    "    from streamsx.rest_primitives import Instance\n",
+    "except ImportError:\n",
+    "    # streamsx < 1.15.1\n",
+    "    from streamsx.rest import Instance\n",
+    "\n",
     "import streamsx.topology.context\n",
     "from time import sleep\n",
     "from datetime import datetime\n",
@@ -526,7 +541,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -540,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
