--- a/Streams-SPLToolkitsTutorial.ipynb
+++ b/Streams-SPLToolkitsTutorial.ipynb
@@ -355,8 +355,7 @@
     "                                   config=cfg)\n",
     "# The submission_result object contains information about the running application, or job\n",
     "if submission_result.job:\n",
-    "    streams_job = submission_result.job\n",
-    "    print(\"JobId: \", submission_result['id'] , \"Name: \", submission_result['name'])"
+    "    print(\"JobId: \", submission_result.job.id , \"Name: \", submission_result.job.name)"
    ]
   },
   {
@@ -386,7 +385,7 @@
    "outputs": [],
    "source": [
     "# cancel the job directly using the Job object\n",
-    "streams_job.cancel()"
+    "submission_result.job.cancel()"
    ]
   },
   {
@@ -479,7 +478,7 @@
     "                                                config=cfg)\n",
     "# The submission_result object contains information about the running application, or job\n",
     "if submission_result_microservice.job:\n",
-    "    print(\"JobId: \", submission_result_microservice['id'], \"Name: \", submission_result_microservice['name'])"
+    "    print(\"JobId: \", submission_result_microservice.job.id , \"Name: \", submission_result_microservice.job.name)"
    ]
   },
   {
@@ -546,7 +545,7 @@
     "                                              config=cfg)\n",
     "# The submission_result object contains information about the running application, or job\n",
     "if submission_result_nlp_sample.job:\n",
-    "    print(\"JobId: \", submission_result_nlp_sample['id'], \"Name: \", submission_result_nlp_sample['name'])"
+    "    print(\"JobId: \", submission_result_nlp_sample.job.id, \"Name: \", submission_result_nlp_sample.job.name)"
    ]
   },
   {
@@ -730,7 +729,7 @@
     "                                              config=cfg)\n",
     "# The submission_result object contains information about the running application, or job\n",
     "if submission_result_spl_sample.job:\n",
-    "    print(\"JobId: \", submission_result_spl_sample['id'], \"Name: \",submission_result_spl_sample['name'])"
+    "    print(\"JobId: \", submission_result_spl_sample.job.id, \"Name: \", submission_result_spl_sample.job.name)"
    ]
   },
   {
